--- a/build.xml
+++ b/build.xml
@@ -1,64 +1,52 @@
-	
 <project default="all" basedir="." xmlns:sonar="antlib:org.sonar.ant">
+
 <property name="src.java.dir" location="./src/son"/>
+
 <property name="result.dir" location="./target"/>
+
 <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
-
-<property name="sonar.jdbc.username" value="sonar"/>
-  <property name="sonar.jdbc.password" value="sonar"/>
- <property name="sonar.host.url" value="http://localhost:9000"/>
-<property name="sonar.projectkey" value="org.sonarqube:sonarqube-scanner-ant"/>
-<property name="sonar.projectname" value="exampel of sonarqube"/>
-<property name="sonar.projectversion" value="1.0"/>
-<property name="sonar.language" value= "java"/>						
-<property name="sonar.sources" value="./src/son"/>
-<property name="sonar.java.binaries" value="./target"/>					
-
-
-	<path id="NecessaryLibraries">
-	<pathelement location="./MyLibraries/junit-4.12.jar"/>
-
-	<!--matcher-->
-	<pathelement location="./MyLibraries/hamcrest-core-1.3.jar"/>
-	<pathelement
-	location="./MyLibraries/selenium-server-standalone-3.9.0.jar"/>
-	</path>
-		
-		
+  
+  
+  <property name="sonar.jdbc.username" value="sonar" />
+ <property name="sonar.jdbc.password" value="sonar" />
+  <property name="sonar.host.url" value="http://localhost:9000" />
+	
+	<property name="sonar.projectKey" value="org.sonarqube:sonarqube-scanner-ant" />
+	<property name="sonar.projectName" value="Example of SonarQube Scanner for Ant Usage" />
+	<property name="sonar.projectVersion" value="1.0" />
+	<property name="sonar.language" value="java" />
+	<property name="sonar.sources" value="./src/son"/>
+	<property name="sonar.binaries" value="./target" />
+	  
+	
 <target name="compile">
-	
-<mkdir dir="${result.javaclasses.dir}"/>
-<javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true"
-includeantruntime="false">
-<classpath>
-<path refid="NecessaryLibraries"/>
-<pathelement location="${result.javaclasses.dir}"/>
-</classpath>
-</javac>
-</target>
-<target name="test" depends="compile">
-<!--fork : each test will run in its own JVM (to seperate test cases)-->
-	
-<junit printsummary="true" haltonfailure="true" fork="true" >
-<classpath>
-<path refid="NecessaryLibraries"></path>
-<pathelement location="${result.javaclasses.dir}"/>
-</classpath>
-<formatter type="brief" usefile="false"/>
-<batchtest >
-<fileset dir="${result.javaclasses.dir}" >
-<include name="**/*test1.class"/>
-</fileset>
-</batchtest>
-</junit>
-</target>
 
-<target name="sonar" depends="compile">
-<taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-<classpath path	="C:/sonarqube-7.0/lib/scanner/sonar-scanner-engine-shaded-7.0.jar"/>
-	</taskdef>
-	<sonar:sonar/>				
+<mkdir dir="${result.javaclasses.dir}"/>
+
+<javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true"
+
+includeantruntime="false">
 	
-</target>		
-   <target name="all" depends="compile,sonar"/>
+	</javac>
+	</target>
+  
+
+
+
+  <target name="sonar" depends="compile">
+		<taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
+			<!-- Update the following line, or put the "sonar-ant-task-*.jar" file in your "$HOME/.ant/lib" folder -->
+			<classpath path="C:/apache-ant-1.10.1/lib/sonarqube-ant-task-2.5" />
+		</taskdef>
+		
+		<!-- Execute SonarQube Scanner for Ant Analysis -->
+		<sonar:sonar />
+	
+
+</target>
+<target name="all" depends="compile,sonar" />
+
+
+
+
 </project>
