--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 <property name="result.dir" location="./target"/>
 
 <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
-  
+  <sojood alsayyed>
   
   <property name="sonar.jdbc.username" value="sonar" />
  <property name="sonar.jdbc.password" value="sonar" />
